-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 14
-
Component/s: hotspot
-
b07
We still have a few places in the HS codebase where "this" is compared to NULL.
When compiling with xlc16 / xlclang we get these warnings :
warning: 'this' pointer cannot be null in well-defined C++ code; comparison may be assumed to always evaluate to false [-Wtautological-undefined-compare]
so those places should be removed where possible.
When compiling with xlc16 / xlclang we get these warnings :
warning: 'this' pointer cannot be null in well-defined C++ code; comparison may be assumed to always evaluate to false [-Wtautological-undefined-compare]
so those places should be removed where possible.
- relates to
-
JDK-8305922 [aix,linux] Avoid comparing 'this' to nullptr
-
- Resolved
-