8227633: avoid comparing this pointers to NULL

Reviewed-by: coleenp, mdoerr